2008-07-03  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.31~.

2008-05-29  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.30.

2008-05-28  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac (HILDON_DEPENDS): Replace libossohelp with hildon-help.

2008-05-12  Eero Tamminen  <eero.tamminen@nokia.com>

	* README: Typo fix and additional information for symbol versioning.

2008-05-12  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.30~.

2008-05-05  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.29.

2008-05-05  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (kindergarten_destroy): Traverse the whole
	child list and act on childs with a non-zero pid.
	(store_state): Likewise.

2008-05-05  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (child_destroy): Reset pid at the beginning.

2008-05-05  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.29~.

2008-04-27  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.28.

2008-04-27  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (rise_oom_defense): Change error to warning
	when the defender failed to execute.

2008-04-27  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/report.h (enum report_type): Add report_warning.
	(warning): New macro.
	* launcher/report.c (vreport): Handle report_warning.

2008-04-23  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (store_state): Call comm_msg_destroy.
	(load_state): Likewise.

2008-04-23  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.28~.

2008-04-15  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.27.

2008-04-15  Guillem Jover  <guillem.jover@nokia.com>

	* README: Add some documentation about version scripts.

2008-04-15  Guillem Jover  <guillem.jover@nokia.com>
