@@ -5,6 +5,8 @@ maemo-launcher (0.31-1) UNRELEASED; urgency=low
     approach.
   * Let's take quality seriously by disabling the application crash
     notifications. (Fixes: NB#86713)
+  * Disable self core dumping on maemo-invoker just before enabling signal
+    forwarding. (Fixes: NB#86713)
 
  -- Guillem Jover <guillem.jover@nokia.com>  Fri, 06 Jun 2008 20:23:48 +0300
 
