@@ -1,5 +1,11 @@
 2008-07-03  Guillem Jover  <guillem.jover@nokia.com>
 
+	* launcher/invoker.c (disable_self_core_dump): New function.
+	(main): Call disable_self_core_dump before setting up the signal
+	forwarder.
+
+2008-07-03  Guillem Jover  <guillem.jover@nokia.com>
+
 	* configure.ac: Bump version to 0.31~.
 
 2008-05-29  Guillem Jover  <guillem.jover@nokia.com>
